fix alignment for content

--- a/main.css
+++ b/main.css
@@ -58,6 +58,7 @@
 
 .column#content {
   background: #015170;
+  padding: 5px;
   width: 80vw; 
 }
 
@@ -71,9 +72,11 @@ table, th, td {
 
 table#comparison {
   background: #004266;
+  align-self: center;
 }
 
 table#osrs_skills {
+  align-self: center;
   background: #004266;
   width: 50vw;
   text-align: center;
